@@ -1,3 +1,10 @@
+2006-03-07  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/GlobalHistory.cpp:
+
+	Build fix to build with 1.8 branch. No code changes, only
+	#ifdef code that must not be built on 1.8 branch.
+
 2006-03-06  Christian Persch  <chpe@cvs.gnome.org>
 
 	=== Release 1.9.99 ===
